<resources>
    <string name="main">Main page</string>
    <string name="shop">Main page</string>
    <string name="title_activity_forget_pass">ForgetPass</string>
    <string name="app_name">Jm3eia</string>
    <string name="action_settings"> إعدادات</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_forget_password">ForgetPassword</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="send_forget">إرسال كلمة المرور</string>
    <string name="email_forget">البريد الإلكترونى</string>
    <string name="user_name">أسم المستخدم</string>
    <string name="name">الاسم بالكامل</string>
    <string name="pass">كلمة المرور </string>
    <string name="phone">رقم الجوال</string>
    <string name="address">العنوان</string>
    <string name="address_one">المنطقة</string>
    <string name="area">القطعة</string>
    <string name="street">الشارع</string>
    <string name="num">رقم المنزل</string>
    <string name="save">حفظ</string>
    <string name="cancel">إلغاء</string>
    <string name="login">تسجيل الدخول</string>
    <string name="sign_out">تسجيل الخروج</string>
    <string name="success_login">تم تسجيل الدخول بنجاج </string>
    <string name="success_register">تم التسجيل بنجاج </string>
    <string name="forget_pass">نسيت كلمة المرور</string>
    <string name="register">تسجيل عضو جديد</string>
    <string name="account">حسابى</string>
    <string name="main_page">الصفحة الرئيسية</string>
    <string name="cart">سلة مشترياتى</string>
    <string name="re_request">إعادة الطلب</string>
    <string name="setting">إعدادات</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="call_us">إتصل بنا</string>
    <string name="all_department">كل الأقسام</string>
    <string name="search_product">بحث عن منتج</string>
    <string name="add_to_cart">إضف الى السلة</string>
    <string name="register_new">تسجيل عضو جديد</string>
    <string name="search">البحث عن منتج</string>
    <string name="quantity">الكمية</string>
    <string name="date">التاريخ</string>
    <string name="my_cart">سلة مشترياتى</string>
     <string name="loading_report_product">&#8230;جاري إرسال</string>
    <string name="loading_categories">جاري تحميل الاقسام &#8230;</string>
    <string name="loading_myfavorit">جاري تحميل مفضلتي &#8230;</string>
    <string name="loading_add_comment">جاري رفع التعليق &#8230;</string>
    <string name="loading_remove_message">جاري حذف المحادثة&#8230;</string>
    <string name="loading_get_alerts">جاري تحميل الإشعارات &#8230;</string>
    <string name="loading_get_messages">جاري تحميل الرسائل  &#8230;</string>
    <string name="loading_proudct">جاري تحميل المنتجات &#8230;</string>
    <string name="loading_register">جاري التسجيل &#8230;</string>
    <string name="loading_show_offer">جاري تحميل العروض &#8230;</string>
    <string name="loading_search">جاري البحث &#8230;</string>
    <string name="loading_signin">جاري تسجيل الدخول &#8230;</string>
    <string name="loading_offer">جاري فتح الاعلان &#8230;</string>
    <string name="loading_change_password">جاري تغيير كلمة المرور &#8230;</string>
    <string name="loading_change_mobile">جاري تغيير رقم الجوال&#8230;</string>
    <string name="loading_change_email">جاري تغيير البريد الإلكتروني&#8230;</string>
    <string name="loading_add_favorit">يتم الان إضافة المنتج الى المفضلة </string>
    <string name="loading_remove_alerts">يتم الان مسح الإشعار   &#8230; </string>
    <string name="loading_remove_messages">يتم الان مسح كل الرسائل   &#8230; </string>
    <string name="sending_message">&#8230;ارسال رسالة </string>
    <string name="loading_city">جاري تحميل المدن &#8230;</string>
    <string name="loading">جاري تحميل &#8230;</string>
    <string name="loading_get_comment">جاري تحميل التعليقات &#8230;</string>
    <string name="loading_my_list">تحميل قائمتي  &#8230;</string>
    <string name="loading_delete_offer">جاري مسح الإعلان  &#8230;</string>
    <string name="loading_delete_favorit">جاري مسح الإعلان من مفضلتي  &#8230;</string>
    <string name="failure_ws">Sorry, There is Failure happen in call API..</string>
    <string name="forgett_password"><u>نسيت كلمة المرور</u></string>
    <string name="registration"><u>تسجيل مستخدم جديد</u></string>
    <string name="email_password_validate1">ادخل البريد الالكتروني واكلمة المرور</string>
    <string name="registeration_validate1">من فضلك ادخل جميع البيانات</string>
    <string name="invalid_mail">ادخل الايميل الصحيح</string>
    <string name="invalid_password">ادخل كلمة المرور الصحيح</string>
    <string name="add_cart">أضف الى السله</string>
    <string name="category">الأقسام</string>
    <string name="category1">المشروبات</string>
    <string name="category2">اللحوم والمأكولات البحرية</string>
    <string name="category3">الفواكة الطازجة والخضروات</string>
    <string name="category4">المخبوزات ومنتجات الالبان</string>
    <string name="category5">المعلبات و لوازم الطهى</string>
    <string name="category6">شوكولاتة -حلويات - ايس كريم</string>
    <string name="category7">الشيبس و المكسرات</string>
    <string name="category8">منظفات بأنواعها</string>
    <string name="category9">مستلزمات المنزل</string>
    <string name="category10">العناية الشخصية</string>
    <string name="category11">العناية بالطفل</string>
    <string name="category12">الصيدلية</string>
    <string name="category13">المطحنة (القهوة ومشتقاتها)</string>
    <string name="final_total">الإجمالى النهائى</string>
    <string name="deliver">خدمة التوصيل</string>
    <string name="total">الإجمالى</string>
    <string name="inform_request">اتمام الطلب</string>
    <string name="cancel_request">إلغاء الطلب</string>
    <string name="old_pass">الرقم السرى القديم</string>
    <string name="new_pass"> الرقم السرى الجديد</string>
    <string name="re_new_pass"> تأكيد الرقم السرى</string>
    <string name="send_new_pass"> تغيير الرقم السرى</string>
    <string name="add_cart_laoding"> أضافة المنتج الى السلة</string>
    <string name="cart_auth_request"> تسجيل الدخول</string>
    <string name="cart_without_auth_request">إكمال الطلب بدون تسجيل</string>
    <string name="request_done"> تنفيذ الطلب</string>
    <string name="title_activity_cart_not_auth">CartNotAuth</string>
    <string name="delete_cart_laoding"> حذف المنتج من السلة</string>
    <string name="hello_world">Hello world!</string>
    <string name="gada"> الجادة </string>
    <string name="price_total"> يجب ان يزيد ثمن المشتريات عن 10 دنانير </string>
    <string name="see_cart">  شاهد السلة </string>
    <string name="find_cart"> المنتج موجود بالفعل فى السلة</string>
    <string name="enter_data">ادخل البيانات كاملة</string>
    <string name="load_request"> جارى تأكيد الطلب</string>
    <string name="loading_change">جاري تغيير  البيانات&#8230;</string>
    <string name="dialog_yes"> نعم </string>
    <string name="dialog_no"> لا </string>
    <string name="dialog_sure">هل تريد تسجيل الخروج</string>
    <string name="dialog_buy"> طريقة الطلب </string>
    <string name="dr">  دك   </string>
    <string name="about_us">من نحن</string>
    <string name="rules">شروط إستخدام الموقع</string>
</resources>