<?xml version="1.0" encoding="utf-8"?>
<ScrollView
android:layout_height="match_parent"
android:layout_width="match_parent"
xmlns:android="http://schemas.android.com/apk/res/android" >
>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_sign_up"
    tools:context="droidahmed.com.jm3eia.account.SignUp">
    <EditText
        android:id="@+id/edRegName"
         android:paddingRight="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_border"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edRegUserName"
         android:paddingRight="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_border"
        android:hint="@string/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edRegPass"
         android:paddingRight="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textPassword"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_border"
        android:hint="@string/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edRegEmail"
         android:paddingRight="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textEmailAddress"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_border"
        android:hint="@string/email_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edRegPhone"
         android:paddingRight="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="phone"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_border"
        android:hint="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
         android:paddingRight="25dp"
        android:inputType="phone"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:clickable="false"
        android:text="@string/address"
        android:layout_marginTop="20dp"
        android:background="@color/light_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />
    <EditText
        android:id="@+id/edRegAddressOne"
         android:paddingRight="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_border"
        android:hint="@string/address_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edRegAddressTwo"
         android:paddingRight="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_border"
        android:hint="@string/area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edRegAddressStreet"
         android:paddingRight="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_border"
        android:hint="@string/street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edGada"
        android:paddingRight="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="number"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_border"
        android:hint="@string/gada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edRegNum"
         android:paddingRight="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="number"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_border"
        android:hint="@string/num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.7"/>
        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="3.4"
            android:layout_below="@+id/edForgetPass"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            android:textColor="#fff"
            android:background="@drawable/button_green"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"/>
</LinearLayout>
</ScrollView>